--- a/src/styles.css
+++ b/src/styles.css
@@ -25,9 +25,27 @@ li {
 }
 
 .weather-app {
-  max-width: 600px;
-  margin: 20px auto;
   padding: 20px;
   border: 1px solid #dadde1;
   border-radius: 5px;
+}
+
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 20px auto;
+}
+
+.overview {
+  margin-bottom: 20px;
+}
+
+#temperature {
+  font-size: 40px;
+  padding-left: 10px;
+}
+
+#units {
+  position: relative;
+  top: -15px;
+  font-size: 15px;
 }
