--- a/src/styles.css
+++ b/src/styles.css
@@ -18,11 +18,14 @@ ul {
 li {
   list-style: none;
   color: rgb(135, 135, 135);
-  text-transform: capitalize;
   font-size: 16px;
   line-height: 19px;
   padding: 0px;
   margin: 0;
+}
+
+li:first-letter {
+  text-transform: capitalize;
 }
 
 .weather-app {
