--- a/src/styles.css
+++ b/src/styles.css
@@ -43,6 +43,15 @@ li:first-letter {
   margin-bottom: 20px;
 }
 
+.weather-temperature .active {
+  color: rgb(135, 135, 135);
+  cursor: default;
+}
+
+.weather-temperature .active:hover {
+  text-decoration: none;
+}
+
 #temperature {
   font-size: 40px;
   padding-left: 10px;
