--- a/src/styles.css
+++ b/src/styles.css
@@ -44,7 +44,7 @@ li:first-letter {
 }
 
 .weather-temperature .active {
-  color: rgb(135, 135, 135);
+  color: rgb(186, 186, 186);
   cursor: default;
 }
 
@@ -54,6 +54,32 @@ li:first-letter {
 
 .weather-forecast {
   margin-top: 20px;
+}
+
+.weather-forecast h3 {
+  color: rgb(135, 135, 135);
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+  height: 15px;
+  line-height: 15px;
+  padding-top: 7px;
+}
+
+.weather-forecast img {
+  display: block;
+  margin: 0 auto;
+  height: 48px;
+  width: 48px;
+}
+
+.weather-forecast-temperature {
+  text-align: center;
+  color: rgb(135, 135, 135);
+  font-size: 13px;
+  font-weight: 400;
+  height: auto;
+  line-height: 15px;
 }
 
 #temperature {
