--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@ body {
   font-weight: 100;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: ##f7f6f7;
 }
 
 h1 {
@@ -32,6 +33,7 @@ li:first-letter {
   padding: 20px;
   border: 1px solid #dadde1;
   border-radius: 5px;
+  background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
 }
 
 .weather-app-wrapper {
